--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^0.8.5+3
+  path_provider: ^2.0.11
+  uuid: ^3.0.6
   sqflite: any
   path: any
   shared_preferences: ^2.0.6
