--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^0.8.5+3
+  file_picker: ^5.2.3
   path_provider: ^2.0.11
+  url_launcher: ^6.0.10
   uuid: ^3.0.6
   sqflite: any
   path: any
@@ -40,6 +42,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  permission_handler: ^11.0.1
+  open_file: ^3.3.2
 
 dev_dependencies:
   flutter_test:
