google map auto complete + ai searching suggestion

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
         android:label="intern_searching_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data
+  android:name="com.google.android.geo.API_KEY"
+  android:value="AIzaSyBUjSAHP6GNjLJCYQe02yCu5wbZiNLznA4"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
