--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,6 +34,12 @@ dependencies:
   file_picker: ^5.2.3
   path_provider: ^2.0.11
   url_launcher: ^6.0.10
+  google_maps_flutter: ^2.1.1
+  #flutter_google_places: ^0.3.0
+  #google_maps_webservice: ^0.4.0
+  http: ^0.13.6
+  geocoding: ^2.0.0
+  provider: ^6.0.0
   uuid: ^3.0.6
   sqflite: any
   path: any
@@ -44,6 +50,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   permission_handler: ^11.0.1
   open_file: ^3.3.2
+  google_places_autocomplete_text_field: ^0.1.3
 
 dev_dependencies:
   flutter_test:
