--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   permission_handler: ^11.0.1
   open_file: ^3.3.2
   google_places_autocomplete_text_field: ^0.1.3
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
